# perfect-skill-suggester

./: .gitignore  .gitmodules  .markdownlint.json  CHANGELOG.md  README.md  build.sh  cliff.toml  marketplace.json  pyproject.toml  requirements.txt
.claude-plugin/: plugin.json
.github/workflows/: build-binaries.yml  notify-marketplace.yml  validate.yml
.serena/: project.yml
.trashcan/: README.txt
agents/: pss-agent-profiler.md
commands/: pss-add-element.md  pss-add-to-index.md  pss-added-since.md  pss-change-agent-profile.md  pss-get-description.md  pss-make-plugin-from-profile.md  pss-reindex-skills.md  pss-search.md  pss-setup-agent.md  pss-status.md
commands/pss-add-to-index/: execution-protocol.md
commands/pss-change-agent-profile/: execution.md
commands/pss-get-description/: execution-protocol.md
commands/pss-reindex-skills/: 00-phase0-clean-slate.md  01-phase1-discovery.md  02-phase2-co-usage.md  03-completion-and-reporting.md  04-index-schema.md
commands/pss-setup-agent/: execution.md
commands/pss-status/: binary-status.md  execution-protocol.md  test-mode.md  verbose-and-cache.md
design/tasks/: TRDD-014bcc92-001a-46de-9dc7-41503d61a706-find-matches-react-zero-score.md  TRDD-152e697f-17ff-4e86-aed1-008af90e287a-temporal-history-index.md  TRDD-20260625_073606+0200-LIFEV38X-lifeline-external-consumers-v38.md  TRDD-20260625_191833+0200-LIFE12FU-lifeline-perproject-enablement-and-mcp.md  TRDD-20260715_111758+0200-1Z8SGQ7N-extension-tracking-temporal-defects.md  TRDD-46ac514e-3627-44a6-b916-f37a1504b969-cozodb-unification.md
docs/: ANTHROPIC-COMPLIANCE-REPORT.md  CC-COMPATIBILITY.md  DEVELOPMENT.md  FEATURE_COMPARISON.md  PLUGIN-VALIDATION.md  PSS-ARCHITECTURE.md  PSS-MCP-SERVER.md  PSS_FILE_FORMAT_SPEC.md  pss-cli-reference.md  pss-reindex-reference.md
docs_dev/: pss-consistency-audit-20260123-004715.md
git-hooks/: pre-push
hooks/: hooks.json
prompts/: pass1-haiku.md  pass1-sonnet.md  pass2-haiku.md  pass2-sonnet.md
rust/skill-suggester/: Cargo.toml  hook.ps1  hook.sh
rust/skill-suggester/src/: main.rs
schemas/: pss-agent-toml-schema.json  pss-categories.json  pss-domain-registry-schema.json  pss-domains.json  pss-schema.json  pss-skill-index-schema.json  pss-v1.schema.json
scripts/: cpv_network_resilience.py  cpv_token_cost.py  cpv_validation_common.py  gitignore_filter.py  install_data_deps_template.py  pss_add_element.py  pss_agent_benchmark.py  pss_aggregate_domains.py  pss_build.py  pss_build_all.py  pss_clean.py  pss_cleanup.py  pss_cozodb.py  pss_discover.py  pss_discover_skills.py  pss_generate.py  pss_generate_agent_toml.py  pss_hook.py  pss_make_plugin.py  pss_mcp_server.py  pss_merge_queue.py  pss_paths.py  pss_qualitative_benchmark.py  pss_reindex.py  pss_release.py  pss_setup.py  pss_ship.py  pss_test_e2e.py  pss_validate.py  pss_validate_agent_toml.py  pss_validate_hook.py  pss_validate_index.py  pss_validate_marketplace.py  pss_validate_plugin.py  pss_validate_skill.py  pss_verify_profile.py  publish.py  smart_exec.py  validate_agent.py  validate_command.py  (+16 more)
scripts/detectors/: pss-reindex-due.sh
skills/pss-agent-toml/: SKILL.md
skills/pss-authoring/: SKILL.md
skills/pss-benchmark-agent/: SKILL.md
skills/pss-cli-reference/: SKILL.md
skills/pss-design-alignment/: SKILL.md
skills/pss-usage/: SKILL.md
skills/text-categorization-improver/: SKILL.md
src/skill-suggester/: Cargo.toml
templates/: pass1-sonnet.md  pass2-sonnet.md
tests/unit/: test_hp5_reindex_crash_counter.py  test_phase_1_1_correctness.py  test_phase_1_3_fail_loud.py  test_phase_3_format_standardization.py  test_phase_c_cozodb_migration.py  test_phase_d_cli.py  test_pss_cleanup.py  test_pss_cozodb_escape.py  test_pss_cozodb_phase_b.py  (+9 more)
(+41 files in other folders)
