[project]
name = "perfect-skill-suggester"
version = "3.2.12"
description = "PSS plugin validation and utility scripts"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-pyyaml>=6.0.12.20250915",
    "anthropic>=0.84.0",
    # CozoDB Python bindings — used by scripts/pss_cozodb.py for indexed
    # queries (count, added_since, search_by_*). Required by scripts/pss_hook.py
    # health check since v2.10.0. The [embedded] extra installs the native
    # RocksDB backend; wheels ship for darwin-arm64, darwin-x86_64,
    # linux-x86_64, linux-arm64, and windows-x86_64.
    "pycozo[embedded]>=0.7.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
