[project]
name = "perfect-skill-suggester"
version = "3.8.3"
description = "PSS plugin validation and utility scripts"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-pyyaml>=6.0.12.20250915",
    # CozoDB Python bindings — used by scripts/pss_cozodb.py for indexed
    # queries (count, added_since, search_by_*). Required by scripts/pss_hook.py
    # health check since v2.10.0. The [embedded] extra installs the native
    # RocksDB backend; wheels ship for darwin-arm64, darwin-x86_64,
    # linux-x86_64, linux-arm64, and windows-x86_64.
    "pycozo[embedded]>=0.7.6",
    # tomli-w — emits sanitized .agent.toml copies into generated plugins
    # (audit 20260514 SEC-5). scripts/pss_make_plugin.py mirrors this in its
    # PEP 723 inline header for direct `uv run --script` invocation.
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    # The MCP server (scripts/pss_mcp_server.py, opt-in at runtime) is a HARD
    # dependency of its test module: without it the whole module hits
    # `pytest.importorskip` and every test in it SKIPS — the gate goes green
    # having verified nothing. `mcp` stays out of [project.dependencies] so the
    # hot UserPromptSubmit path keeps its lean install.
    "mcp[cli]>=1.2",
]
